<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Closet Swap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search">Search...</string>

    <string-array name="nav_drawer_items">
        <item>Feed</item>
        <item>New Post</item>
        <item>Find Friends</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>
    <string-array name="nav_drawer_icons">
        <item>ic_action_search.png</item>
        <item>ic_action_search.png</item>
        <item>ic_action_search.png</item>
    </string-array>

    <string name="title_activity_test_fragment">TestFragment</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="signup">Register</string>
    <string name="register_now">Register for an account</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="title_activity_item_details">ItemDetailsActivity</string>

    <string name="image_description">Clothing Image</string>
    <string name="send_email">Send Email</string>
    <string name="datelabel">"Date Posted: "</string>
    <string name="itemlabel">"Category: "</string>
    <string name="sizelabel">"Size: "</string>
    <string name="colorlabel">"Color: "</string>
    <string name="descriptionlabel">"Description: "</string>
    <string name="uploadPic">Upload</string>
    
    <string name="emptyPosts">There are no posts to display. Adding more friends will increase the amount of posts you will see.</string>
    <!-- Start of new_post_fragment.xml strings -->
    
    <string name="postTitle_prompt">Post Title: </string>
    <string name="itemList_prompt">Item Type: </string>
    <string name="sizePrompt">Item Size: </string>
    <string name="condition_prompt">Condition: </string>
    <string-array name="category_array">
        <item> </item>
        <item>T-Shirt</item>
        <item>Dress Shirt</item>
        <item>Coat</item>
        <item>Shorts</item>
        <item>Pants</item>
        <item>Dress</item>
        <item>Skirt</item>
        <item>Hat</item>
        <item>Mens Shoes</item>
        <item>Womens Shoes</item>
    </string-array>
    <string-array name="condition_array">
        <item> </item>
        <item>0%</item>
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
        <item>25%</item>
        <item>30%</item>
        <item>35%</item>
        <item>40%</item>
        <item>45%</item>
        <item>50%</item>
        <item>55%</item>
        <item>60%</item>
        <item>65%</item>
        <item>70%</item>
        <item>75%</item>
        <item>80%</item>
        <item>85%</item>
        <item>90%</item>
        <item>95%</item>
        <item>100%</item>
    </string-array>
    
    <string-array name="shirt_sizes">
        <item></item>
        <item>XS</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
        <item>XXXL</item>
    </string-array>
    
    <string-array name="dress_sizes">
        <item></item>
        <item>00</item>
        <item>0</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
    </string-array>
    
    <string-array name="waist_sizes">
        <item></item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
        <item>30</item>
        <item>32</item>
        <item>34</item>
        <item>36</item>
        <item>38</item>
        <item>40</item>
        <item>42</item>
        <item>44</item>
        <item>46</item>
        <item>48</item>
    </string-array>
    
    <string-array name="length_sizes">
        <item></item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
        <item>30</item>
        <item>32</item>
        <item>34</item>
        <item>36</item>
        <item>38</item>
        <item>40</item>
    </string-array>
    
    <string name="colorPrompt">Color: </string>
    <string name="descriptionPrompt">Description: </string>
    <string name="contactPrompt">Contact Info: </string>
    <string name="back">Back</string>
    <string name="createPost">Create Post</string>

    <!-- End of new_post_fragment.xml strings -->
 
</resources>
