<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
    
<RelativeLayout 
    android:padding="10dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/ivClothingImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/emo_im_winking"
        android:contentDescription="@string/image_description" />
    
    <TextView
        android:id="@+id/datelabel"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivClothingImage"
        android:text="@string/datelabel" />
    

    <TextView
        android:id="@+id/tvDate"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivClothingImage"
        android:layout_toRightOf="@+id/datelabel"
        android:layout_toEndOf="@+id/datelabel" />

    <TextView
        android:id="@+id/categorylabel"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datelabel"
        android:text="@string/itemlabel" />

    <TextView
        android:id="@+id/tvCategory"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDate"
        android:layout_toRightOf="@+id/categorylabel"
        android:layout_toEndOf="@+id/categorylabel" />

    <TextView
        android:id="@+id/sizelabel"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categorylabel"
        android:text="@string/sizelabel" />

    <TextView
        android:id="@+id/tvSize"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCategory"
        android:layout_toRightOf="@+id/sizelabel"
        android:layout_toEndOf="@+id/sizelabel" />
    
    <TextView
        android:id="@+id/descriptionlabel"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sizelabel"
        android:text="@string/descriptionlabel" />

    <TextView
        android:id="@+id/tvDescription"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionlabel"/>
    
    <Button
        android:id="@+id/bSendEmail"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvDescription"
        android:text="@string/send_email" />
</RelativeLayout>

</ScrollView>