<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical">
	
    <!-- Start of Buttons View -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="3dp" >

        <Button
            android:id="@+id/bUploadBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/takePic"
            android:textSize="16sp" />

        <Button
            android:id="@+id/createPost"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/createPost"
            android:textSize="16sp" />

    </RelativeLayout>
        <!-- End of Buttons View -->
    
        <!-- Start of Image View -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:padding="3dp">

        <ImageView
            android:id="@+id/newPic_imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/app_icon" />
        
    </RelativeLayout>
    <!-- End of Image View -->
    
    <!-- Start of Title View -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="3dp">
        
    	<TextView
        	android:id="@+id/postTitlePrompt"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/postTitle_prompt"
        	android:textSize="20sp" />

        <EditText
            android:id="@+id/postTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/postTitlePrompt"
            android:ems="10"
            android:inputType="text" />
        
    </RelativeLayout>
    <!-- End of Title View -->
    
    <!-- Start of ItemType View -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="3dp" >

        <Spinner
            android:id="@+id/itemList"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="15dp"
            android:entries="@array/category_array" />

        <TextView
            android:id="@+id/itemTypePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/itemList_prompt"
            android:textSize="20sp" />
        
    </RelativeLayout>
    <!-- End of ItemType View -->
    
    <!-- Start of ItemSize View -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="3dp" >

        <TextView
            android:id="@+id/sizePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/sizePrompt"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/size"
            android:layout_width="175dp"
            android:layout_height="wrap_content" 
            android:layout_alignParentRight="true"
    	    android:layout_centerVertical="true"
    	    android:ems="10"
    	    android:inputType="text"/>
    </RelativeLayout>
            <!-- End of ItemSize View -->
    
            <!-- Start of Condition View -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="3dp" >

        <TextView
            android:id="@+id/conditionPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/condition_prompt"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/conditionList"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:entries="@array/condition_array"
            android:prompt="@string/condition_prompt" />
        
    </RelativeLayout>
    <!-- End of Condition View -->
    
    <!-- Start of Color View -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="3dp" >

    	<TextView
    	    android:id="@+id/colorPrompt"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentLeft="true"
    	    android:layout_alignTop="@+id/colorName"
    	    android:text="@string/colorPrompt"
    	    android:textSize="20sp" />

    	<EditText
    	    android:id="@+id/colorName"
    	    android:layout_width="175dp"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentRight="true"
    	    android:layout_centerVertical="true"
    	    android:ems="10"
    	    android:inputType="text" />
        
    </RelativeLayout>
    <!-- End of Color View -->
    
    <!-- Start of Description View -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="3dp" >

    	<TextView
    	    android:id="@+id/descriptionPrompt"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentLeft="true"
    	    android:text="@string/descriptionPrompt"
    	    android:textSize="20sp" />

    	<EditText
    	    android:id="@+id/descriptionText"
    	    android:layout_width="175dp"
    	    android:layout_height="80dp"
    	    android:layout_alignParentRight="true"
    	    android:layout_alignParentTop="true"
    	    android:ems="10"
    	    android:inputType="text" >

    	    <requestFocus />
    	</EditText>
    	
    </RelativeLayout>
    <!-- End of Description View -->

	<!-- Start of Contact View -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="3dp" >

        <TextView
            android:id="@+id/contactPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/contactText"
            android:layout_alignParentLeft="true"
            android:text="@string/contactPrompt"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/contactText"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="text" 
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <!-- End of Contact View -->

</LinearLayout>

</ScrollView>